--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>BurgerJawn</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@900&family=Roboto+Condensed&display=swap" rel="stylesheet">  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
